@@ -1,3 +1,8 @@
+2005-06-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* examples/pango/pangocairo-simple.py (main): Demonstrate how to
+	output PDF file from the same drawing subroutine.
+
 2005-06-14  Johan Dahlin  <jdahlin@async.com.br>
 
 	* examples/ide/edit.py: Improve demo, patch by 
